# ovfs

./: Cargo.toml  README.md  ovfs_config.toml  test.sh
.github/scripts/: behavior_test.py  behavior_test_judge.py  build_and_run_ovfs.sh  file_behavior_test.py  install_and_run_vm.sh  path_behavior_test.py  user-data
.github/workflows/: behavior_test.yml  format_check.yml
docs/proposal/: Proposal.md  proposal.md
docs/reports/: 05.12-05.19.md  05.20-05.26.md  05.20-06.02.md  05.27-06.02.md  06.03-06.27.md  06.28-07.22.md  07.23-08.04.md  08.05-08.20.md
scripts/: basic_benchmark.py  example.txt  install_and_run_test_iso.sh  install_and_run_vm.sh  install_and_run_vm_with_virtiofs.sh  make_test_iso.sh  run_ovfs_with_fs.sh  run_ovfs_with_s3.sh  run_s3_with_minio.sh  s3_scripts.sh  scripts.sh  test.sh  ubuntu_auto_install
src/: buffer.rs  descriptor_utils.rs  error.rs  file_traits.rs  filesystem.rs  filesystem_message.rs  filesystem_util.rs  main.rs  placeholder.rs  server.rs  util.rs  virtiofs.rs  virtiofs_util.rs
src/ovfs/: config.rs  consts.rs  mod.rs  ovfs_filesystem.rs  types.rs  utils.rs
src/temp/: descriptor_utils.rs
