[package]
name = "ovfs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["std"] }
bitflags = "1.2"
env_logger = "0.11.3"
futures = "0.3.30"
libc = "0.2.139"
log = "0.4.22"
opendal = { version = "0.47.3", features = ["services-fs"] }
sharded-slab = "0.1.7"
snafu = "0.8.3"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
vhost = "0.10.0"
vhost-user-backend = "0.13.1"
virtio-bindings = { version = "0.2.1", features = ["virtio-v5_0_0"] }
virtio-queue = "0.11.0"
vm-memory = { version = "0.14.0", features = ["backend-mmap", "backend-atomic"] }
vmm-sys-util = "0.12.1"
